# aoc2023

./: Cargo.toml
src/1/: 1.1.rs  1.1.solution  1.1.test  1.2.rs
src/2/: 2.1.rs  2.2.rs
