[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "1-1"
path = "src/1/1.1.rs"

[[bin]]
name = "1-2"
path = "src/1/1.2.rs"

[[bin]]
name = "2-1"
path = "src/2/2.1.rs"

[[bin]]
name = "2-2"
path = "src/2/2.2.rs"

[dependencies]
